--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "npm:dart-sass",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0"
   },
@@ -34,6 +35,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3"
   }
 }
