--- a/package.json
+++ b/package.json
@@ -88,7 +88,8 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.3"
+    "@types/styled-components": "^5.1.3",
+    "@types/webpack-env": "^1.15.3"
   },
   "jest": {
     "roots": [
