--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dayjs": "^1.8.36",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "echarts": "^4.9.0",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-loader": "3.0.3",
@@ -91,6 +92,7 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
+    "@types/echarts": "^4.6.5",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.3",
     "@types/webpack-env": "^1.15.3"
