--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tally-react",
   "version": "0.1.0",
+  "homepage": "https://huanghaotioan.top/tally-react-PRODUCTION",
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
